--- a/porto.html
+++ b/porto.html
@@ -17,7 +17,7 @@
             <div class="nav">
                 <h4>About</h4>
                 <h4>Project</h4>
-                <h4>Get in Touchm</h4>
+                <h4>Get in Touch</h4>
             </div>
         </header>
     </div>
