Update StartPage & Home

--- a/Main/sosmed.html
+++ b/Main/sosmed.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Sosmed</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
                                 <h3>About</h3>
                             </div>
                         </a>
-                        <a href="pastpro.html" style="text-decoration: none;">
+                        <a href="PastPro.html" style="text-decoration: none;">
                             <div class="navrow">
                                 <h3>Past Project</h3>
                             </div>
@@ -38,25 +38,6 @@
                             </div>
                         </a>
                     </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Isi -->
-        <div class="navrow">
-            <div class="laman">
-                <div class="img">
-                    <img src="https://i.postimg.cc/vbVPvhrN/asset4.png" alt="about image" width="415" height="600">
-                </div>
-            </div>
-            <div class="laman">
-                <div class="img">
-                    <img src="https://i.postimg.cc/FKBjVwFp/asset1.png" alt="project image" width="415" height="600">
-                </div>
-            </div>
-            <div class="laman">
-                <div class="img">
-                    <img src="https://i.postimg.cc/XYxKppTT/asset2.png" alt="sosmed image" width="415" height="600">
                 </div>
             </div>
         </div>
