--- a/Main/start.html
+++ b/Main/start.html
@@ -21,9 +21,16 @@
 <body>
     <!-- opening -->
     <div class="laman">
-        <a href="home.html" style="text-decoration: none;">
+        <!-- <a href="home.html" style="text-decoration: none;">
             <div class="bg"></div>
-        </a>
+        </a> -->
+        <div class="bg">
+            <a href="home.html" style="text-decoration: none;">
+                <div class="button" style="margin-top: 200px;">
+                    <h3>Get to Know</h3>
+                </div>
+            </a>
+        </div>
     </div>
 </body>
 </html>
