--- a/Main/about.html
+++ b/Main/about.html
@@ -41,6 +41,27 @@
                 </div>
             </div>
         </div>
+    
+        <!-- isi -->
+        <div class="navrow">
+            <div class="navcol">
+                <div class="bulet" style="background-image: url(https://i.postimg.cc/MTyGdZCz/foto.png); width: 250px; height: 250px; max-width: 250px; margin-left: 80px; margin-top: 120px;">
+                </div>
+            </div>
+            <div class="wadah">
+                <div class="wadah" style="text-align: center; text-align: left; margin-top: 160px;">
+                    <h1>Tykea Farraz Z</h1>
+                </div>
+                <div class="navrow" style="align-items: center; justify-content: center; text-align: center; padding: 60px; margin-top: -80px;">
+                    <h3>Hi, I'm an undergraduate from Universitas Negeri Surabaya with a keen interest in web development, system design, UI/UX Designer, system analyst, and graphic design.</h3>
+                </div>
+            </div>
+            <div class="navcol">
+                <div class="bulet" style="width: 60px; height: 60px;"></div>
+                <div class="bulet" style="width: 60px; height: 60px; background-image: url(https://i.postimg.cc/bJZ7wGwT/motif1.png);"></div>
+                <div class="bulet" style="width: 60px; height: 60px; background-color: #c3acd0;"></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
