--- a/Main/about.html
+++ b/Main/about.html
@@ -57,9 +57,9 @@
                 </div>
             </div>
             <div class="navcol">
-                <div class="bulet" style="width: 60px; height: 60px;"></div>
+                <div class="bulet" style="border: 5px solid #f7efe5;width: 60px; height: 60px;"></div>
                 <div class="bulet" style="width: 60px; height: 60px; background-image: url(https://i.postimg.cc/bJZ7wGwT/motif1.png);"></div>
-                <div class="bulet" style="width: 60px; height: 60px; background-color: #c3acd0;"></div>
+                <div class="bulet" style="border: 5px solid #e87045;width: 60px; height: 60px; background-color: #e87045;"></div>
             </div>
         </div>
     </div>
