Hapus Get in Touch

--- a/Main/Home.html
+++ b/Main/Home.html
@@ -31,12 +31,6 @@
                             <div class="navrow">
                                 <h3>Past Project</h3>
                             </div>
-                        </a>
-                        <a href="sosmed.html" style="text-decoration: none;">
-                            <div class="navrow">
-                                <h3>Get in Touch</h3>
-                            </div>
-                        </a>
                     </div>
                 </div>
             </div>
@@ -44,6 +38,12 @@
 
         <!-- Isi -->
         <div class="navrow">
+            <div class="wadah" style="border: 5px solid #f7efe5; width: 300px; height: 300px; margin: 80px;"></div>
+            <div class="wadah" style="border: 5px solid #e87045; background-image: url(https://i.postimg.cc/3R4DFHBB/BG3.png); width: 300px; height: 300px; margin: 80px;"></div>
+            <div class="wadah" style="border: 5px solid #c3acd0; background-image: url(https://i.postimg.cc/ydXLB9Mt/BG2.png); width: 300px; height: 300px; margin: 80px;"></div>
+        </div>
+
+        <!-- <div class="navrow">
             <div class="laman">
                 <div class="img">
                     <img src="https://i.postimg.cc/vbVPvhrN/asset4.png" alt="about image" width="415" height="600">
@@ -59,7 +59,7 @@
                     <img src="https://i.postimg.cc/XYxKppTT/asset2.png" alt="sosmed image" width="415" height="600">
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
