--- a/Main/pastpro.html
+++ b/Main/pastpro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sosmed</title>
+    <title>Past Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -31,6 +31,7 @@
                             <div class="navrow">
                                 <h3>Past Project</h3>
                             </div>
+                        </a>
                     </div>
                 </div>
             </div>
