--- a/Main/Home.html
+++ b/Main/Home.html
@@ -31,16 +31,44 @@
                             <div class="navrow">
                                 <h3>Past Project</h3>
                             </div>
+                        </a>
+                        <a href="home.html" style="text-decoration: none;">
+                            <div class="navrow">
+                                <h3>Contact</h3>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- Isi -->
-        <div class="navrow">
-            <div class="wadah" style="border: 5px solid #f7efe5; width: 300px; height: 300px; margin: 80px;"></div>
-            <div class="wadah" style="border: 5px solid #e87045; background-image: url(https://i.postimg.cc/3R4DFHBB/BG3.png); width: 300px; height: 300px; margin: 80px;"></div>
-            <div class="wadah" style="border: 5px solid #c3acd0; background-image: url(https://i.postimg.cc/ydXLB9Mt/BG2.png); width: 300px; height: 300px; margin: 80px;"></div>
+        <div class="navcol">
+            <div class="wadah" style="text-align: center; margin-top: 20px;">
+                <h1>Get to Know Me</h1>
+            </div>
+            <div class="navrow">
+                <a href="https://www.linkedin.com/in/tykea-farraz-zafira?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" style="text-decoration: none;">
+                    <div class="wadah" style="border: 5px solid #f7efe5; width: 300px; height: 300px; margin: 40px; margin-top: 40px;">
+                        <div class="wadah" style="margin-left: 25px;">
+                            <h2>LinkedIn</h2>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://www.instagram.com/tfarrazz/" style="text-decoration: none;">
+                    <div class="wadah" style="border: 5px solid #e87045; background-image: url(https://i.postimg.cc/3R4DFHBB/BG3.png); width: 300px; height: 300px; margin: 40px; margin-top: 40px;">
+                        <div class="wadah" style="margin-left: 25px;">
+                            <h2>Instagram</h2>
+                         </div>
+                    </div>
+                </a>
+                <a href="https://www.youtube.com/@033_tia_tykeafarrazzafira5" style="text-decoration: none;">
+                    <div class="wadah" style="border: 5px solid #c3acd0; background-image: url(https://i.postimg.cc/ydXLB9Mt/BG2.png); width: 300px; height: 300px; margin: 40px; margin-top: 40px;">
+                        <div class="wadah" style="margin-left: 25px;">
+                            <h2>YouTube</h2>
+                         </div>
+                    </div>
+                </a>
         </div>
 
         <!-- <div class="navrow">
