--- a/Main/about.html
+++ b/Main/about.html
@@ -32,6 +32,11 @@
                                 <h3>Past Project</h3>
                             </div>
                         </a>
+                        <a href="home.html" style="text-decoration: none;">
+                            <div class="navrow">
+                                <h3>Contact</h3>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
