Update Post Project & finishing

--- a/Main/pastpro.html
+++ b/Main/pastpro.html
@@ -12,9 +12,14 @@
         <!-- NavBar -->
         <div class="ribbon">
             <div class="navrow">
-                <a href="home.html" style="text-decoration: none;">
+                <a href="start.html" style="text-decoration: none;">
                     <div class="navrow">
-                        <h1>PORTFOLIO</h1>
+                        <img src="https://cdn-icons-png.flaticon.com/128/10264/10264225.png" alt="out" style="height: 40px; width: 40px; margin: 3px; justify-content: center; align-items: center; margin-top: 23px; margin-right: 15px;">
+                        <a href="home.html" style="text-decoration: none;">
+                            <div class="wadah" style="color: #f7efe5;">
+                                <h1>PORTFOLIO</h1>
+                            </div>
+                        </a>
                     </div>
                 </a>
             </div>
@@ -41,6 +46,112 @@
                 </div>
             </div>
         </div>
+
+        <!-- Isi -->
+        <div class="laman" id="postpro1">
+            <div class="navrow">
+                <div class="navcol">
+                    <div class="wadah" style="border: 5px solid #c3acd0; width: 200px; height: 200px; margin: 60px; margin-left: 200px; justify-content: space-between;">
+                        <div class="wadah" style="display: flex; justify-content: center; margin-top: 35px;">
+                            <img src="https://cdn-icons-png.flaticon.com/128/10345/10345658.png" alt="individu">
+                        </div>
+                    </div>
+                    <a href="#individual" style="text-decoration: none;">
+                        <div class="button" style="margin-left: 225px;">
+                            <div class="nav">
+                                <h4>Individual</h4>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="navcol">
+                    <div class="wadah" style="border: 5px solid #c3acd0; width: 200px; height: 200px; margin: 60px; margin-right: 200px; justify-content: space-between;">
+                        <div class="wadah" style="display: flex; justify-content: center; margin-top: 35px;">
+                            <img src="https://cdn-icons-png.flaticon.com/128/11694/11694656.png" alt="tim">
+                        </div>
+                    </div>
+                    <a href="#team" style="text-decoration: none;">
+                        <div class="button" style="margin-left: 85px;">
+                            <div class="nav">
+                                <h4>Team</h4>
+                            </div>
+                        </div>
+                    </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Individual -->
+        <div class="laman1" id="individual" style="background-color: #c3acd0;">
+            <div class="nav"></div>
+            <div class="navrow">
+                <div class="navcol">
+                    <div class="bulet" style="border-color: #674188; width: 60px; height: 60px;"></div>
+                    <div class="bulet" style="background-image: url(https://i.postimg.cc/3R4DFHBB/BG3.png); border-color: #f7efe5; width: 100px; height: 100px;"></div>
+                    <div class="bulet" style="background-color: #674188; width: 80px; height: 80px;"></div>
+                </div>
+                <div class="navcol">
+                    <div class="wadah" style="background-image: url(https://i.postimg.cc/zXDZzrz3/BG.png); margin: 50px; margin-top: 40px; align-items: center; justify-content: center; width: 700px; height: 500px;">
+                        <div class="nav" style="text-decoration-color: #1d1922; text-align: left; margin-left: 20px;">
+                            <div class="navcol">
+                                <div class="navrow">
+                                    <h1>Individual</h1>
+                                    <a href="individu.html" style="text-decoration: none;">
+                                        <div class="button" style="margin-top: 20px;">
+                                            <h5>Know More</h5>
+                                        </div>
+                                    </a>
+                                </div>
+                                <img src="https://i.postimg.cc/wBpN1tLH/ref.png" alt="ref" style="max-width: calc(95%); justify-content: center;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="navcol">
+                    <div class="bulet" style="background-color: #e87045; width: 100px; height: 100px;"></div>
+                    <div class="bulet" style="background-color: #674188; width: 60px; height: 60px;"></div>
+                    <div class="bulet" style="border-color: #674188; width: 80px; height: 80px;"></div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Team -->
+        <div class="laman" id="team">
+            <div class="nav"></div>
+            <div class="navrow">
+                <div class="navcol">
+                    <div class="bulet" style="border-color: #674188; width: 60px; height: 60px;"></div>
+                    <div class="bulet" style="background-image: url(https://i.postimg.cc/3R4DFHBB/BG3.png); border-color: #f7efe5; width: 100px; height: 100px;"></div>
+                    <div class="bulet" style="background-color: #674188; width: 80px; height: 80px;"></div>
+                </div>
+                <div class="navcol">
+                    <div class="wadah" style="background-image: url(https://i.postimg.cc/jjTL1SXX/BG4.png); margin: 50px; margin-top: 40px; align-items: center; justify-content: center; width: 700px; height: 500px;">
+                        <div class="nav" style="text-decoration-color: #1d1922; text-align: left; margin-left: 20px;">
+                            <div class="navcol">
+                                <div class="navrow">
+                                    <h1>Team</h1>
+                                    <a href="tim.html" style="text-decoration: none;">
+                                        <div class="button" style="margin-top: 20px; background-color: #674188; color: #f7efe5;">
+                                            <h5>Know More</h5>
+                                        </div>
+                                    </a>
+                                </div>
+                                <img src="https://i.postimg.cc/VvJ6trfY/ref2.png" alt="ref" style="max-width: calc(95%); justify-content: center;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="navcol">
+                    <div class="bulet" style="background-color: #e87045; width: 100px; height: 100px;"></div>
+                    <div class="bulet" style="background-color: #674188; width: 60px; height: 60px;"></div>
+                    <div class="bulet" style="border-color: #674188; width: 80px; height: 80px;"></div>
+                </div>
+            </div>
+        </div>
     </div>
+    <footer>
+        &copy; 2023 Tykea Farraz Zafira
+    </footer>
 </body>
 </html>
