--- a/Main/sosmed.html
+++ b/Main/sosmed.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Past Project</title>
+    <title>Sosmed</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,9 +12,14 @@
         <!-- NavBar -->
         <div class="ribbon">
             <div class="navrow">
-                <a href="home.html" style="text-decoration: none;">
+                <a href="start.html" style="text-decoration: none;">
                     <div class="navrow">
-                        <h1>PORTFOLIO</h1>
+                        <img src="https://cdn-icons-png.flaticon.com/128/10264/10264225.png" alt="out" style="height: 40px; width: 40px; margin: 3px; justify-content: center; align-items: center; margin-top: 23px; margin-right: 15px;">
+                        <a href="home.html" style="text-decoration: none;">
+                            <div class="wadah" style="color: #f7efe5;">
+                                <h1>PORTFOLIO</h1>
+                            </div>
+                        </a>
                     </div>
                 </a>
             </div>
@@ -31,16 +36,13 @@
                             <div class="navrow">
                                 <h3>Past Project</h3>
                             </div>
-                        </a>
-                        <a href="home.html" style="text-decoration: none;">
-                            <div class="navrow">
-                                <h3>Contact</h3>
-                            </div>
-                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <footer>
+        &copy; 2023 Tykea Farraz Zafira
+    </footer>
 </body>
 </html>
