--- a/Main/start.html
+++ b/Main/start.html
@@ -5,29 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        .button {
-            background-color: #e87045;
-            color: #1d1922;
-            padding: 5px;
-            border-radius: 50px;
-            width: 150px;
-            display: flex;
-            text-align: center;
-            justify-content: center;
-        }
-    </style>
 </head>
 <body>
     <!-- opening -->
-    <div class="laman">
-        <!-- <a href="home.html" style="text-decoration: none;">
-            <div class="bg"></div>
-        </a> -->
+    <div class="laman" id="start">
         <div class="bg">
             <a href="home.html" style="text-decoration: none;">
                 <div class="button" style="margin-top: 200px;">
-                    <h3>Get to Know</h3>
+                    <h3>Get to Know Me</h3>
                 </div>
             </a>
         </div>
