--- a/Main/Home.html
+++ b/Main/Home.html
@@ -12,9 +12,14 @@
         <!-- NavBar -->
         <div class="ribbon">
             <div class="navrow">
-                <a href="home.html" style="text-decoration: none;">
+                <a href="start.html" style="text-decoration: none;">
                     <div class="navrow">
-                        <h1>PORTFOLIO</h1>
+                        <img src="https://cdn-icons-png.flaticon.com/128/10264/10264225.png" alt="out" style="height: 40px; width: 40px; margin: 3px; justify-content: center; align-items: center; margin-top: 23px; margin-right: 15px;">
+                        <a href="home.html" style="text-decoration: none;">
+                            <div class="wadah" style="color: #f7efe5;">
+                                <h1>PORTFOLIO</h1>
+                            </div>
+                        </a>
                     </div>
                 </a>
             </div>
@@ -59,7 +64,7 @@
                     <div class="wadah" style="border: 5px solid #e87045; background-image: url(https://i.postimg.cc/3R4DFHBB/BG3.png); width: 300px; height: 300px; margin: 40px; margin-top: 40px;">
                         <div class="wadah" style="margin-left: 25px;">
                             <h2>Instagram</h2>
-                         </div>
+                        </div>
                     </div>
                 </a>
                 <a href="https://www.youtube.com/@033_tia_tykeafarrazzafira5" style="text-decoration: none;">
@@ -70,24 +75,9 @@
                     </div>
                 </a>
         </div>
-
-        <!-- <div class="navrow">
-            <div class="laman">
-                <div class="img">
-                    <img src="https://i.postimg.cc/vbVPvhrN/asset4.png" alt="about image" width="415" height="600">
-                </div>
-            </div>
-            <div class="laman">
-                <div class="img">
-                    <img src="https://i.postimg.cc/FKBjVwFp/asset1.png" alt="project image" width="415" height="600">
-                </div>
-            </div>
-            <div class="laman">
-                <div class="img">
-                    <img src="https://i.postimg.cc/XYxKppTT/asset2.png" alt="sosmed image" width="415" height="600">
-                </div>
-            </div>
-        </div> -->
     </div>
+    <footer>
+        &copy; 2023 Tykea Farraz Zafira
+    </footer>
 </body>
 </html>
