--- a/Main/about.html
+++ b/Main/about.html
@@ -12,9 +12,14 @@
         <!-- NavBar -->
         <div class="ribbon">
             <div class="navrow">
-                <a href="home.html" style="text-decoration: none;">
+                <a href="start.html" style="text-decoration: none;">
                     <div class="navrow">
-                        <h1>PORTFOLIO</h1>
+                        <img src="https://cdn-icons-png.flaticon.com/128/10264/10264225.png" alt="out" style="height: 40px; width: 40px; margin: 3px; justify-content: center; align-items: center; margin-top: 23px; margin-right: 15px;">
+                        <a href="home.html" style="text-decoration: none;">
+                            <div class="wadah" style="color: #f7efe5;">
+                                <h1>PORTFOLIO</h1>
+                            </div>
+                        </a>
                     </div>
                 </a>
             </div>
@@ -45,7 +50,7 @@
         <!-- isi -->
         <div class="navrow">
             <div class="navcol">
-                <div class="bulet" style="background-image: url(https://i.postimg.cc/MTyGdZCz/foto.png); width: 250px; height: 250px; max-width: 250px; margin-left: 80px; margin-top: 120px;">
+                <div class="bulet" style="background-image: url(https://i.postimg.cc/HnL9q2pT/foto.png); width: 250px; height: 250px; max-width: 250px; margin-left: 80px; margin-top: 120px;">
                 </div>
             </div>
             <div class="wadah">
@@ -63,5 +68,8 @@
             </div>
         </div>
     </div>
+    <footer>
+        &copy; 2023 Tykea Farraz Zafira
+    </footer>
 </body>
 </html>
